k8s_config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otusapp
  namespace: otus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otusapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: otusapp
    spec:
      containers:
        - name: otusapp
          image: dismay/otusapp:2
#          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
