k8s_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp
  namespace: otusapp
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: otusapp
