k8s_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ing
  namespace: otus
  annotations:
    kubernates.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: otus-srv
                port:
                  number: 8000
            pathType: Prefix
            path: /
